--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div>
-            <div>
+            <div class="header">
                 <div><img src="images/logo.png" /></div>
                 <div><img src="images/characters_08.jpg" /><span>Yori</span></div>
             </div>
