--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <div><img src="images/logo.png" /></div>
                 <div><img src="images/characters_08.jpg" /><span>Yori</span></div>
             </div>
-            <div>
+            <div class="cards">
                 <div class="card"><img src="images/characters_01.jpg" /><span>Sakura</span></div> 
                 <div class="card"><img src="images/characters_02.jpg" /><span>Kaede</span></div>
                 <div class="card"><img src="images/characters_03.jpg" /><span>Aya</span></div>
