--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
     <body>
-        <div>
+        <div class="wrap">
             <div class="header">
                 <div><img src="images/logo.png" /></div>
                 <div><img src="images/characters_08.jpg" /><span>Yori</span></div>
