border added to mystery card and card changed to round
Add padding and border color to mystery card and changed radius to 100% to make card appear round

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="wrap">
             <div class="header">
                 <div><img src="images/logo.png" /></div>
-                <div><img src="images/characters_08.jpg" /><span>Yori</span></div>
+                <div><img class="mystery" src="images/characters_08.jpg" /><span>Yori</span></div>
             </div>
             <div class="cards">
                 <div class="card"><img src="images/characters_01.jpg" /><span>Sakura</span></div> 
