Add border to instructions
Add border to instructions section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="card"><img src="images/characters_19.jpg" /><span>Saki</span></div>
                 <div class="card"><img src="images/characters_20.jpg" /><span>Kazuo</span></div>
             </div>
-            <div>
+            <div class="instructions">
                 <h2>Instructions</h2>
                 <ol>
                     <li>Each player opens the application on their own device. A random Mystery Card will be assigned to you, which your opponent will have to guess.</li>
