--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Guess Who?</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+        <script src="script.js" defer></script>
     </head>
     <body>
         <div class="wrap">
