Create randomizer function for mystery card and text
Create randomizer function for mystery card image and text in JS via array of characters and integer/index combination and add span class in HTML to target text source to be dynamically changed via JS.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="wrap">
             <div class="header">
                 <div><img src="images/logo.png" /></div>
-                <div><img class="mystery-card" src="images/characters_08.jpg" /><span>Yori</span></div>
+                <div><img class="mystery-card" src="" /><span class="mystery-name"></span></span></div>
             </div>
             <div class="cards">
                 <div class="card" onclick="toggleEliminated(this)"><img src="images/characters_01.jpg" /><span>Sakura</span></div> 
